Fixed letter alignment

--- a/styles.css
+++ b/styles.css
@@ -3,7 +3,7 @@ body {
     animation: backgradient 10s infinite;
 }
 
-#letters > [class^="letter"]:hover {
+#letters > .btnWrapperL > [class^="letter"]:hover {
     background-color: #4CAF50;
     color: white;
 }
@@ -27,8 +27,8 @@ body {
     color: black;
     background-color: white;
     text-align: center;
-    height: 50px;
     line-height: 2.5;
+    margin: 3px;
 }
 
 .btnWrapper {
@@ -39,7 +39,6 @@ body {
     display: table-cell;
     vertical-align: middle;
     text-align: center;
-    height: 51px;
 }
 
 .btn {
